@@ -123,8 +123,9 @@ allprojects {
     jcenter()
     mavenCentral()
     mavenLocal()
+    maven {url "https://hyperledger-org.bintray.com/besu-repo"}
     maven { url "https://consensys.bintray.com/pegasys-repo" }
-    maven { url "https://repository.apache.org/content/repositories/snapshots/" }
+    maven { url "https://repo.spring.io/libs-release" }
   }
 
   dependencies { errorprone "com.google.errorprone:error_prone_core" }
@@ -242,7 +243,9 @@ allprojects {
       '--add-opens',
       'java.base/java.util=ALL-UNNAMED',
       '--add-opens',
-      'java.base/java.util.concurrent=ALL-UNNAMED'
+      'java.base/java.util.concurrent=ALL-UNNAMED',
+      '--add-opens',
+      'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
     ]
     Set toImport = [
       'test.ethereum.include',
@@ -485,7 +488,7 @@ startScripts {
 
 
 dependencies {
-  implementation project(':besu')
+  compile project(':besu')
   errorprone 'com.google.errorprone:error_prone_core'
 }
 
